--- a/frontend/src/app/components/view-event/view-event.component.html
+++ b/frontend/src/app/components/view-event/view-event.component.html
@@ -1,4 +1,20 @@
 <div class="container mx-auto">
+
+  <div class="flex flex-col md:flex-row items-center justify-between mb-9">
+    
+    <button (click)="userDashboard()"
+      class="bg-green-500 hover:bg-green-600 active:bg-green-700 p-4 rounded-lg text-white font-semibold shadow-lg transition duration-200 mb-4 flex items-center w-40">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
+        <path
+          d="M8 9a3 3 0 100-6 3 3 0 000 6zM8 11a6 6 0 016 6H2a6 6 0 016-6zM16 7a1 1 0 10-2 0v1h-1a1 1 0 100 2h1v1a1 1 0 102 0v-1h1a1 1 0 100-2h-1V7z" />
+      </svg>
+      Dashboard
+    </button>
+
+  </div>
+
+
+
   <h2 class="text-center my-4 text-2xl font-semibold">Events Coming Soon</h2>
 
   <div
