--- a/frontend/src/app/components/chat-room/chat-room.component.html
+++ b/frontend/src/app/components/chat-room/chat-room.component.html
@@ -1,29 +1,4 @@
-<button (click)="userDashboard()"
-  class="ml-4 bg-pink-500 hover:bg-pink-600 active:bg-green-700 p-4 rounded-lg text-white font-semibold shadow-lg transition duration-200 mb-4 flex items-center w-40">
-  <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
-    <path
-      d="M8 9a3 3 0 100-6 3 3 0 000 6zM8 11a6 6 0 016 6H2a6 6 0 016-6zM16 7a1 1 0 10-2 0v1h-1a1 1 0 100 2h1v1a1 1 0 102 0v-1h1a1 1 0 100-2h-1V7z" />
-  </svg>
-  Dashboard
-</button>
-
-
-
-<div>
-  <h1>Real-Time Chat with Rooms</h1>
-
- <!-- connection.component.html -->
-
-  <div>
-    <input [(ngModel)]="roomName" placeholder="Enter Room Name" />
-    <button (click)="joinRoom()">Join Room</button>
-  </div>
-
- 
-
-
-
-  <!-- <div *ngIf="successMessage" class="fixed top-5 right-5 bg-green-500 text-white px-6 py-3 rounded-lg shadow-md animate-bounce">
+<div *ngIf="successMessage" class="fixed top-5 right-5 bg-green-500 text-white px-6 py-3 rounded-lg shadow-md animate-bounce">
     {{ successMessage }}
 </div>
 
@@ -32,7 +7,7 @@
         <p> Welcome, {{ names }}!</p>
     </div>
 </div>
-<div class="bg-white shadow-xl rounded-2xl p-8 max-w-3xl mx-auto mt-10 mb-8">
+<div class="bg-white shadow-xl rounded-2xl p-8 max-w-3xl mx-auto mt-10 mb-8 max-h-full">
     <h3 class="text-4xl font-extrabold text-gray-800 mb-8 text-center">
         Discord Room: {{ this.pathValue[1] }}
     </h3>
@@ -92,4 +67,4 @@
             </button>
         </div>
     </div>
-</div> -->
+</div>
