--- a/frontend/src/app/components/user-view/user-view.component.html
+++ b/frontend/src/app/components/user-view/user-view.component.html
@@ -1,14 +1,36 @@
 <div class="container mx-auto">
-    <button (click)="viewEvents()" class="bg-pink-500 hover:bg-pink-600 active:bg-pink-700 p-2 px-4 rounded-lg text-white font-semibold shadow-lg transition duration-200 flex items-center">View Events</button>
+    <div class="flex flex-col md:flex-row items-center justify-between mb-9">
+    
+    <button (click)="userDashboard()"
+      class="bg-green-500 hover:bg-green-600 active:bg-green-700 p-4 rounded-lg text-white font-semibold shadow-lg transition duration-200 mb-4 flex items-center w-40">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
+        <path
+          d="M8 9a3 3 0 100-6 3 3 0 000 6zM8 11a6 6 0 016 6H2a6 6 0 016-6zM16 7a1 1 0 10-2 0v1h-1a1 1 0 100 2h1v1a1 1 0 102 0v-1h1a1 1 0 100-2h-1V7z" />
+      </svg>
+      Dashboard
+    </button>
+
+    <button (click)="viewEvents()"
+      class="bg-red-500 hover:bg-red-600 active:bg-red-700 p-4 rounded-lg text-white font-semibold shadow-lg transition duration-200 mb-4 flex items-center w-40">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
+        <path
+          d="M8 9a3 3 0 100-6 3 3 0 000 6zM8 11a6 6 0 016 6H2a6 6 0 016-6zM16 7a1 1 0 10-2 0v1h-1a1 1 0 100 2h1v1a1 1 0 102 0v-1h1a1 1 0 100-2h-1V7z" />
+      </svg>
+      View Events
+    </button>      
+    </div>
+   
+   
+   
     <h2 class="text-center my-4 text-2xl font-semibold">Events to Attend</h2>
   
     <div *ngIf="noeventmessage" class="bg-blue-100 border border-blue-300 text-blue-700 p-4 rounded-lg mb-4 shadow-md">
       {{ noeventmessage }}
     </div>
    
-    <div *ngIf="events?.length > 0" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 shadow-lg">
+    <div *ngIf="events?.length > 0" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 shadow-lg mt-10 mb-8">
       <div *ngFor="let event of events; let i =index" class="bg-white rounded-xl shadow-lg overflow-hidden transform hover:scale-105 transition duration-300">
-        <div class="p-6">
+        <div class="space-y-4 text-xl text-gray-700 p-7">
           <h5 class="text-2xl font-bold text-blue-600"><strong>{{i+1}}.Event Name: </strong>{{ event.Event_name }}</h5>
           <h3 class="text-gray-700 text-lg"><strong>Organised By:</strong> {{ event.org }}</h3>
           <!-- <h3 class="text-gray-700 text-xl my-2"><strong>Event_id: </strong>{{ event.Event_id }}</h3> -->
@@ -26,3 +48,6 @@
       </div>
     </div>
   </div> 
+
+
+  
