--- a/frontend/src/app/components/admin-register/admin-register.component.html
+++ b/frontend/src/app/components/admin-register/admin-register.component.html
@@ -43,7 +43,7 @@
   <h5 class="text-red-500" *ngIf="pass.invalid && pass.touched">password must have one uppercase,one lowercase and length should be greater than 6</h5>
   
   
-  <label for="role" class="text-sm font-xl font-bold text-blue-700 mb-1">Choose Your Role</label>
+  <label for="role" class="text-sm font-xl font-bold text-blue-700 mb-1">Choose User's Role</label>
   <select [(ngModel)]="role" name="role" class="p-3 rounded-md border border-gray-300 focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition">
     <!-- <option value="admin">admin</option> -->
     <option value="organizer">organizer</option>
@@ -54,7 +54,7 @@
         type="submit" 
         class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 px-4 rounded-md shadow transition duration-200 mt-2 disabled:opacity-50 disabled:cursor-not-allowed active:bg-blue-800 active:translate-y-0.5"
         [disabled]="templateform.invalid">
-        Register
+        Create
       </button>
     </form>
     
